[package]
name = "sqlrustgo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo = { path = "../../" }
sqlrustgo-common.workspace = true
sqlrustgo-parser.workspace = true
sqlrustgo-planner.workspace = true
sqlrustgo-optimizer.workspace = true
sqlrustgo-executor.workspace = true
sqlrustgo-storage.workspace = true
sqlrustgo-catalog.workspace = true
sqlrustgo-security.workspace = true
sqlrustgo-transaction.workspace = true
sqlrustgo-telemetry.workspace = true
sqlrustgo-rag = { path = "../rag", features = ["sqlrustgo"] }
query-stats = { path = "../query-stats" }
uuid = { version = "1.0", features = ["v4"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
ctrlc.workspace = true
async-trait.workspace = true
actix-web = "4"
actix-rt = "2"
crossbeam-channel = "0.5"

[[bin]]
name = "sqlrustgo-server"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true
