[package]
name = "sql-diff-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustograd = "0.4"

[dev-dependencies]
sqlrustgo-parser = { path = "../parser" }
sqlrustgo-planner = { path = "../planner" }
sqlrustgo-executor = { path = "../executor" }

[[test]]
name = "sql_diff_tests"
path = "tests/diff_tests.rs"