[package]
name = "sqlrustgo-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
async-trait.workspace = true
miniz_oxide.workspace = true
hex.workspace = true
snap = "1.1"
zstd = "0.13"
arrow.workspace = true
parquet.workspace = true
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile.workspace = true
