[package]
name = "sqlrustgo-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlrustgo-common.workspace = true
sqlrustgo-types.workspace = true
sqlrustgo-gis.workspace = true
sqlrustgo-observability.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
async-trait.workspace = true
miniz_oxide.workspace = true
lz4_flex.workspace = true
snap.workspace = true
zstd.workspace = true
parquet.workspace = true
arrow.workspace = true
aes-gcm = "0.10"
rand.workspace = true
sha2.workspace = true
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
criterion = "0.8"

[[bench]]
name = "storage_benchmark"
harness = false

[[bench]]
name = "clustered_index_benchmark"
harness = false
